<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingTop="@dimen/dialog_padding_top">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
        	android:layout_marginLeft="7dp"
        	android:layout_marginRight="7dp"
        	android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txt_licenses"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"
                android:autoLink="all"
                android:clickable="true"
                android:text="@string/used_libary"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?android:attr/textColorLink" />
 
            <TextView
                android:id="@+id/txt_bug_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center_horizontal"
                android:text="@string/bug_report"
                android:linksClickable="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:text="@string/help_headline"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:linksClickable="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="true"
        android:orientation="horizontal"
        android:paddingTop="0dip" >

        <Button
            android:id="@+id/btnOk"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_ok" />
    </LinearLayout>

</LinearLayout>